@@ -1414,6 +1414,65 @@ literal|"Did not get exception from script"
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testJavaScriptCompatibility
+specifier|public
+name|void
+name|testJavaScriptCompatibility
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|String
+name|chain
+init|=
+literal|"javascript-compatibility"
+decl_stmt|;
+name|SolrInputDocument
+name|d
+init|=
+name|processAdd
+argument_list|(
+name|chain
+argument_list|,
+name|doc
+argument_list|(
+name|f
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"5"
+argument_list|)
+argument_list|,
+name|f
+argument_list|(
+literal|"name"
+argument_list|,
+literal|" foo "
+argument_list|)
+argument_list|,
+name|f
+argument_list|(
+literal|"subject"
+argument_list|,
+literal|"BAR"
+argument_list|)
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"bar"
+argument_list|,
+name|d
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"term_s"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
